fix(button): Cooldown styling not covering whole button

--- a/src/prefabs/button/button.scss
+++ b/src/prefabs/button/button.scss
@@ -134,6 +134,7 @@ $button-z-tooltip: $button-z-cost + 1;
 
     .mixer-cooldown {
       bottom: 0;
+      height: unset;
     }
   }
 }
